--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -51,7 +51,8 @@
 
 .std-form-layout > .form-layout > .form-page {
 	border-radius: var(--border-radius-md);
-	box-shadow: var(--card-shadow);
+	border: 1px solid var(--gray-200);
+	box-shadow: none;
 	background-color: var(--card-bg);
 }
 
@@ -60,13 +61,15 @@
 
 	.form-section-description {
 		margin-bottom: 10px;
-		font-size: var(--text-xs);
-		color: var(--text-muted);
+		font-size: var(--text-xl);
+		color: var(--gray-900);
 	}
 
 	.section-head {
 		@extend .head-title;
-		font-size: var(--text-base);
+		font-size: var(--text-lg);
+		font-weight: var(--weight-semibold);
+		color: var(--gray-800);
 		width: 100%;
 		padding: var(--padding-sm) var(--padding-md);
 		margin: 0;
@@ -180,9 +183,8 @@
 }
 
 .comment-box {
-	@include card();
 	margin-top: var(--margin-lg);
-	padding: var(--padding-lg);
+	padding: 0;
 	.comment-input-header {
 		@extend .head-title;
 		margin-bottom: var(--margin-sm);
@@ -190,12 +192,15 @@
 	.comment-input-container {
 		.frappe-control {
 			margin-bottom: var(--margin-xs);
+			padding-right: 0;
 		}
 		.ql-editor {
-			background-color: var(--control-bg);
-			border-color: var(--gray-400);
-			border-style: none none solid;
-			border-width: 1px;
+			.ql-editor {
+				background-color: var(--bg-color) !important;
+				border: 1px solid var(--gray-200);
+				min-height: 24px;
+				padding: 4px;
+			}
 		}
 	}
 
@@ -213,7 +218,7 @@
 	.form-link-title {
 		margin-top: var(--margin-md);
 		margin-bottom: var(--margin-sm);
-		font-weight: var(--text-bold);
+		font-weight: var(--weight-medium);
 	}
 	.form-documents:first-of-type .row:first-child {
 		.form-link-title {
@@ -232,9 +237,9 @@
 			border: 1px solid var(--border-color);
 			.count {
 				font-size: var(--text-xs);
-				font-weight: 600;
+				font-weight: var(--weight-semibold);
 				background-color: var(--blue-50);
-				border-radius: var(--border-radius-sm);
+				border-radius: var(--border-radius-full);
 				color: var(--blue-500);
 				padding: 0 var(--padding-xs);
 				margin-right: var(--margin-xs);
@@ -247,7 +252,7 @@
 		.open-notification {
 			display: inline-flex;
 			align-items: center;
-			background-color: var(--indicator-red-bg);
+			background-color: var(--gray-100);
 			font-size: var(--text-xs);
 			padding: 0 var(--padding-sm);
 			color: var(--indicator-red);
@@ -335,15 +340,16 @@
 }
 
 @mixin form-message-background($color) {
-	background: var(--bg-#{$color});
-	color: var(--text-on-#{$color});
+	border: 1px solid var(--#{$color}-100);
+    color: var(--#{$color}-800);
+    background: var(--#{$color}-50);
 }
 
 
 .form-message {
 	position: relative;
 	border-radius: var(--border-radius);
-	padding: var(--padding-md) var(--padding-xl);
+	padding: 8px 10px;
 	font-size: var(--text-md, 13px);
 	margin-bottom: var(--margin-md);
 	box-shadow: var(--card-shadow);
@@ -437,6 +443,8 @@
 
 	.form-tabs {
 		.nav-item {
+			font-size: var(--text-base);
+			font-weight: var(--weight-regular);
 			.nav-link {
 				// @dokos: Updated tab styles
 				color: var(--text-muted);
